// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comment_before_given.feature 1`] = `
Feature: A comment before a "Given" should stay before the "Given".
    The blankline should be before the comment and not between the comment and the "Given".

    Scenario:
        Given I have a feature file
        When I run the feature file
        Then I should see the output

        # this comment should stay just before the second given
        Given I have another feature file
        When I run the feature file
        Then I should see the output
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Feature: A comment before a "Given" should stay before the "Given".
    The blankline should be before the comment and not between the comment and the "Given".

    Scenario:
        Given I have a feature file

        When I run the feature file
        Then I should see the output

        # this comment should stay just before the second given
        Given I have another feature file

        When I run the feature file
        Then I should see the output

`;

exports[`datatable_with_PHP_FQCN.feature 1`] = `
Feature: A data table with PHP Fully Qualified Classnames

    Scenario:
        When I have a data table
            | entityClassName | id |
            | App\\Entity\\Cart | 4 |
            | App\\\\Entity\\\\Cart | 5 |
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Feature: A data table with PHP Fully Qualified Classnames

    Scenario:
        When I have a data table
            | entityClassName | id |
            | App\\Entity\\Cart | 4  |
            | App\\Entity\\Cart | 5  |

`;

exports[`docstring_with_json.feature 1`] = `
Feature: complex docstring with JSON in it

    Scenario:
    Given a docstring with 
        """
        1
        "
        2
        \\"
        3
        \\"\\"\\"
        4
        """

        Given I have a complex docstring
        """
        A docstring that is not JSON 
        =======================================

        but will include some somewhere
        -----------------------------------------------------

         [WARNING] Some warning

                   {"error":"NOT AUTHENTICATED","comment":"authentication refused"}

         [OK] Declarations complete.
        """
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Feature: complex docstring with JSON in it

    Scenario:
        Given a docstring with
            """
            1
            "
            2
            \\"
            3
            \\"\\"\\"
            4
            """

        Given I have a complex docstring
            """
            A docstring that is not JSON
            =======================================

            but will include some somewhere
            -----------------------------------------------------

             [WARNING] Some warning

                       {"error":"NOT AUTHENTICATED","comment":"authentication refused"}

             [OK] Declarations complete.
            """

`;

exports[`example.feature 1`] = `
@accountability
@accountability-json
Feature: accountability
    accounts should always be good

    Scenario Outline: Scenario Outline name
        Given I have <number> cukes in my belly
        When I wait <hour> hour
        Then my belly should growl

        Examples:
            | number | hour |
            | 1      |   the first hour of the day    |
            | 2      | 2    |

    @truncateTables
    Scenario: Check accountability
        The scenario definition for "Check accountability"
        # Insert fixtures
        Given the following fixtures files are loaded:
            | 10.contracts.yml |
            | 20.wallet.yml    |
            | 30.tax.yml       |

        Given I inject the header "authorization" with value 'Bearer some-token'

        And I inject the header "accept" with value "application/json"

        Given I create an order
        Then the response status code should be 200
        When I pay the latest order
        And I refund the last payment and transaction list with transactions:
            """
            [
                {
                    "name": "card",
                    "credit": 5000
                }
            ]
            """
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@accountability
@accountability-json
Feature: accountability
    accounts should always be good

    Scenario Outline: Scenario Outline name
        Given I have <number> cukes in my belly

        When I wait <hour> hour
        Then my belly should growl

        Examples:
            | number | hour                      |
            | 1      | the first hour of the day |
            | 2      | 2                         |

    @truncateTables
    Scenario: Check accountability
        The scenario definition for "Check accountability"

        # Insert fixtures
        Given the following fixtures files are loaded:
            | 10.contracts.yml |
            | 20.wallet.yml    |
            | 30.tax.yml       |

        Given I inject the header "authorization" with value 'Bearer some-token'
        And I inject the header "accept" with value "application/json"

        Given I create an order
        Then the response status code should be 200

        When I pay the latest order
        And I refund the last payment and transaction list with transactions:
            """
            [
                {
                    "name": "card",
                    "credit": 5000
                }
            ]
            """

`;

exports[`last_line_comment.feature 1`] = `
Feature: some feature
    Scenario: Insert fixtures
        # add OAuth token
        Given something
# saleStartDate is on summer time
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Feature: some feature

    Scenario: Insert fixtures
        # add OAuth token
        Given something

# saleStartDate is on summer time
`;

exports[`last_line_comment_multiples.feature 1`] = `
Feature: some feature
    Scenario: Insert fixtures
        # add OAuth token
        Given something
        # Then the response status code should be 403
        # And the JSON nodes should be equal to:
        #     | hydra:description | Some error did happened |

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Feature: some feature

    Scenario: Insert fixtures
        # add OAuth token
        Given something

# Then the response status code should be 403
# And the JSON nodes should be equal to:
#     | hydra:description | Some error did happened |
`;

exports[`simple-comment.feature 1`] = `
# feature comment
Feature: coucou

    # scenario comment
    Scenario: Scenario name
        # step comment
        Given a step

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# feature comment
Feature: coucou

    # scenario comment
    Scenario: Scenario name
        # step comment
        Given a step

`;

exports[`unescape_backslashes_table_cell.feature 1`] = `
Feature: Escaped pipes
    The \\-character will be considered as an escape in table cell
    iff it is followed by a |-character, a \\-character or an n.

  Scenario: They are the future
    Given a huge table with escaped characters
     | \\n | 
     | \\\\n |
     | \\\\\\n | 
     | \\\\\\\\n |
      | \\\\\\\\\\n |
      | \\\\\\\\\\\\n |
     | \\| | 
     | \\\\\\| |
     | \\ |
     | a\\b |
     | a\\\\b |
      | a\\\\\\b |
      | a\\\\\\\\b |
      | a\\ |
      | \\a |

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Feature: Escaped pipes
    The \\-character will be considered as an escape in table cell
    iff it is followed by a |-character, a \\-character or an n.

    Scenario: They are the future
        Given a huge table with escaped characters
            | \\n       |
            | \\\\n     |
            | \\\\\\n     |
            | \\\\\\\\n   |
            | \\\\\\\\\\n   |
            | \\\\\\\\\\\\n |
            | \\|      |
            | \\\\\\|    |
            | \\       |
            | a\\b     |
            | a\\b     |
            | a\\\\\\b   |
            | a\\\\\\b   |
            | a\\      |
            | \\a      |

`;
